Make test install target optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,6 @@ target_compile_definitions(coast_input_simulation PRIVATE EXPORT_SYMBOLS)
 target_include_directories(coast_input_simulation PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(coast_input_sim_test PRIVATE coast_input_simulation)
 
-install(TARGETS coast_input_sim_test DESTINATION bin)
+install(TARGETS coast_input_sim_test DESTINATION bin OPTIONAL)
 install(TARGETS coast_input_simulation DESTINATION lib)
 install(FILES input_sim_macros.h input_sim.h DESTINATION include)
